k8s/laravel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-prod
spec:
  selector:
    app: laravel-api
  ports:
    - port: 80
      targetPort: 80
